# model_qwen2.5-vl

./: .gitignore  README.md  pyproject.toml  run_doc_classification.py  run_pages_sorting.py  run_predict.py  run_vqa.py  run_vqa_multi_pages.py  run_vqa_structure_out_inn.py  run_vqa_structure_out_passport.py  run_vqa_structure_out_snils.py
docker/: Dockerfile-cu124
model_qwen2_5_vl/: __init__.py  models.py
model_qwen2_vl/: models.py
src/: model_utils.py  run_predict.py
