[project]
name = "model-qwen2-5-vl"
version = "0.1.2.dev3"
description = "Qwen2.5-VL model implementation for VLM HyperBench"
[project]
name = "model-qwen2_5-vl"
version = "0.1.2.dev4"
description = "Qwen 2.5-VL model wrapper and evaluation scripts"
readme = "README.md"
requires-python = ">=3.10"
# git-зависимость фиксируем через PEP 440 direct URL
# см. https://peps.python.org/pep-0440/#direct-references
dependencies = [
    # В прод-режиме ставим конкретный tag (SemVer) из GitHub
    "model-interface @ git+https://github.com/VLMHyperBenchTeam/model_interface.git@0.1.2",
]
authors = [
    {name = "Anton Shiryaev", email = "med.phisiker@gmail.com"}
]

[project.urls]
Repository = "https://github.com/VLMHyperBenchTeam/model_qwen2.5-vl"
Homepage = "https://github.com/VLMHyperBenchTeam"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# одноимённый пакет в src
packages = ["model_qwen2_5_vl"]

# В dev-режиме, внутри uv workspace, берём локальный пакет
[tool.uv.sources]
model-interface = { workspace = true }

[tool.hatch.metadata]
allow-direct-references = true
